# BoothHunter

./: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  vitest.config.ts
docs/: USER_GUIDE.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  error.rs  lib.rs
src-tauri/src/booth/: client.rs  models.rs  parser.rs
src-tauri/src/commands/: db.rs  item.rs  mod.rs  search.rs
src/components/common/: ErrorBoundary.tsx  Pagination.tsx
src/components/favorites/: FavoriteButton.tsx  FavoritesList.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/search/: AvatarQuickFilter.tsx  FilterPanel.tsx  ItemCard.tsx  SearchBar.tsx  SearchResults.tsx
src/hooks/: useFavorites.ts  usePopularAvatars.ts  useSearch.ts
src/lib/: SearchContext.tsx  booth-api.ts  booth-parser.ts  constants.ts  db.ts  hangul-katakana.test.ts  hangul-katakana.ts  korean-dict.ts  popular-avatars.ts  search-suggestions.ts  types.ts
src/pages/: FavoritesPage.tsx  ItemDetailPage.tsx  SearchPage.tsx
src/test/: setup.ts
